--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <spring-boot-plugin.version>1.5.6.RELEASE</spring-boot-plugin.version>
         <spring-boot.version>1.5.6.RELEASE</spring-boot.version>
         <httpcomponents.version>4.5.1</httpcomponents.version>
-        <otp.version>1.3.0.RB-SNAPSHOT</otp.version>
+        <otp.version>1.2.0</otp.version>
         <assertj-core.version>3.3.0</assertj-core.version>
         <camel-version>2.19.2</camel-version>
         <postgresql.version>9.4-1201-jdbc41</postgresql.version>
@@ -48,7 +48,6 @@
         <fabric8.label.container>spring-boot</fabric8.label.container>
         <fabric8.label.group>quickstarts</fabric8.label.group>
         <fabric8.iconRef>camel</fabric8.iconRef>
-        <onebusaway.gtfs.modules>1.3.12</onebusaway.gtfs.modules>
 
         <!-- Holding back activemq version as newest version no long support spring wired broker config-->
         <activemq.version>5.13.4</activemq.version>
@@ -228,11 +227,6 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-quartz2</artifactId>
-            <version>${camel-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-ftp</artifactId>
             <version>${camel-version}</version>
         </dependency>
         <dependency>
@@ -478,12 +472,7 @@
             <artifactId>hamcrest-junit</artifactId>
             <version>2.0.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.mockftpserver</groupId>
-            <artifactId>MockFtpServer</artifactId>
-            <version>2.6</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-contract-wiremock</artifactId>
@@ -495,22 +484,6 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-gtfs-transformer</artifactId>
-            <version>${onebusaway.gtfs.modules}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.kurtraschke</groupId>
-                    <artifactId>wsf-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.onebusaway</groupId>
-            <artifactId>onebusaway-gtfs-merge</artifactId>
-            <version>${onebusaway.gtfs.modules}</version>
         </dependency>
         <dependency>
             <groupId>no.jskdata</groupId>
