--- a/pom.xml
+++ b/pom.xml
@@ -391,8 +391,8 @@
         <dependency>
             <groupId>crosby.binary</groupId>
             <artifactId>osmpbf</artifactId>
-            <version>1.3.4</version>
-            <classifier>20150914.191218-1</classifier>
+            <version>1.3.4-20150914.191218-1</version>
+            <!--<classifier>20150914.191218-1</classifier>-->
             <!-- Specifying snapshot -->
         </dependency>
         <!-- testing -->
